--- a/package.json
+++ b/package.json
@@ -36,8 +36,12 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
+    "i18next": "^22.5.1",
+    "i18next-browser-languagedetector": "^7.0.2",
+    "i18next-http-backend": "^2.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.3.1",
     "sass": "^1.63.3"
   }
 }
