--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/preset-env": "^7.22.5",
     "@babel/preset-react": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
+    "@svgr/webpack": "^8.0.1",
     "@types/react": "^18.2.12",
     "@types/react-dom": "^18.2.5",
     "babel-loader": "^9.1.2",
@@ -31,6 +32,7 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.3",
     "less-loader": "^11.1.3",
+    "sass": "^1.63.4",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
     "ts-loader": "^9.4.3",
@@ -46,7 +48,6 @@
     "i18next-http-backend": "^2.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-i18next": "^12.3.1",
-    "sass": "^1.63.3"
+    "react-i18next": "^12.3.1"
   }
 }
