--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-loader": "^9.1.2",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.8.1",
+    "dotenv": "^16.2.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.3",
     "less-loader": "^11.1.3",
