--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@svgr/webpack": "^8.0.1",
     "@types/react": "^18.2.12",
     "@types/react-dom": "^18.2.5",
+    "axios": "^1.4.0",
     "babel-loader": "^9.1.2",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.8.1",
@@ -33,10 +34,12 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.3",
     "less-loader": "^11.1.3",
+    "react-toastify": "^9.1.3",
     "sass": "^1.63.4",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
     "ts-loader": "^9.4.3",
+    "ts-node": "^10.9.1",
     "typescript": "^5.1.3",
     "webpack": "^5.86.0",
     "webpack-cli": "^5.1.4",
