--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,13 +8,13 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
+    "noImplicitAny": false,
     "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": false,
     "outDir": "./dist/",
-    "noImplicitAny": true,
     "module": "es6",
     "sourceMap": true
   },
