--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.3",
     "less-loader": "^11.1.3",
+    "mobx": "^6.9.0",
+    "mobx-react": "^7.6.0",
+    "mobx-react-lite": "^3.4.3",
     "sass": "^1.63.4",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
